// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles showing favorite projects on load 1`] = `
[
  {
    "isScannable": false,
    "key": "foo",
    "measures": {},
    "name": "Foo",
    "qualifier": "TRK",
    "tags": [],
    "visibility": "public",
  },
]
`;

exports[`handles showing favorite projects on load 2`] = `
[
  {
    "isFavorite": true,
    "isScannable": false,
    "key": "foo",
    "measures": {},
    "name": "Foo",
    "qualifier": "TRK",
    "tags": [],
    "visibility": "public",
  },
]
`;

exports[`handles updating the favorite status of a project 1`] = `
[
  {
    "isScannable": false,
    "key": "foo",
    "measures": {},
    "name": "Foo",
    "qualifier": "TRK",
    "tags": [],
    "visibility": "public",
  },
]
`;

exports[`handles updating the favorite status of a project 2`] = `
[
  {
    "isFavorite": true,
    "isScannable": false,
    "key": "foo",
    "measures": {},
    "name": "Foo",
    "qualifier": "TRK",
    "tags": [],
    "visibility": "public",
  },
]
`;

exports[`renders 1`] = `
<Styled(div)
  id="projects-page"
>
  <Suggestions
    suggestions="projects"
  />
  <Helmet
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="projects.page"
  />
  <h1
    className="a11y-hidden"
  >
    projects.page
  </h1>
  <LargeCenteredLayout>
    <PageContentFontWrapper
      className="sw-flex sw-w-full sw-body-md"
    >
      <Styled(div)>
        <ScreenPositionHelper
          className="sw-z-filterbar"
        >
          <Component />
        </ScreenPositionHelper>
      </Styled(div)>
      <div
        className="sw-flex sw-flex-col sw-box-border sw-min-w-0 sw-pl-12 sw-pt-6 sw-flex-1"
        role="main"
      >
        <A11ySkipTarget
          anchor="projects_main"
        />
        <h2
          className="a11y-hidden"
        >
          list_of_projects
        </h2>
        <div
          className="sw-w-full"
          style={
            {
              "height": "120px",
            }
          }
        >
          <PageHeader
            currentUser={
              {
                "dismissedNotices": {},
                "isLoggedIn": true,
              }
            }
            onPerspectiveChange={[Function]}
            onQueryChange={[Function]}
            onSortChange={[Function]}
            query={
              {
                "coverage": undefined,
                "duplications": undefined,
                "gate": undefined,
                "languages": undefined,
                "maintainability": undefined,
                "new_coverage": undefined,
                "new_duplications": undefined,
                "new_lines": undefined,
                "new_maintainability": undefined,
                "new_reliability": undefined,
                "new_security": undefined,
                "new_security_review_rating": undefined,
                "qualifier": undefined,
                "reliability": undefined,
                "search": undefined,
                "security": undefined,
                "security_review_rating": undefined,
                "size": undefined,
                "sort": undefined,
                "tags": undefined,
                "view": undefined,
              }
            }
            selectedSort="name"
            total={0}
            view="overall"
          />
        </div>
        <div
          className="it__layout-page-main-inner it__projects-list sw-h-full"
        >
          <ProjectsList
            cardType="overall"
            currentUser={
              {
                "dismissedNotices": {},
                "isLoggedIn": true,
              }
            }
            handleFavorite={[Function]}
            isFavorite={false}
            isFiltered={false}
            loadMore={[Function]}
            loading={false}
            projects={
              [
                {
                  "isScannable": false,
                  "key": "foo",
                  "measures": {},
                  "name": "Foo",
                  "qualifier": "TRK",
                  "tags": [],
                  "visibility": "public",
                },
              ]
            }
            query={
              {
                "coverage": undefined,
                "duplications": undefined,
                "gate": undefined,
                "languages": undefined,
                "maintainability": undefined,
                "new_coverage": undefined,
                "new_duplications": undefined,
                "new_lines": undefined,
                "new_maintainability": undefined,
                "new_reliability": undefined,
                "new_security": undefined,
                "new_security_review_rating": undefined,
                "qualifier": undefined,
                "reliability": undefined,
                "search": undefined,
                "security": undefined,
                "security_review_rating": undefined,
                "size": undefined,
                "sort": undefined,
                "tags": undefined,
                "view": undefined,
              }
            }
            total={0}
          />
        </div>
      </div>
    </PageContentFontWrapper>
  </LargeCenteredLayout>
</Styled(div)>
`;
